Try fixing flickering again

--- a/app/globals.css
+++ b/app/globals.css
@@ -36,6 +36,10 @@
     }
 }
 
+html {
+    color-scheme: light;
+}
+
 @layer base {
     * {
         @apply border-border;
